--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
   "name": "stash-rest-api",
   "version": "2.1.2",
-  "description": "",
+  "description": "Provides access to *some* of Stash's APIs.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ben Sorohan <npm@sorohan.com.au>",
+  "license": "MIT",
   "dependencies": {
     "lodash": "^3.10.0",
     "node-rest-client": "^1.5.1",
     "query-string": "^2.3.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sorohan/stash-rest-api.git"
+  },
+  "keywords": [
+    "stash",
+    "rest",
+    "api"
+  ],
+  "bugs": {
+    "url": "https://github.com/sorohan/stash-rest-api/issues"
+  },
+  "homepage": "https://github.com/sorohan/stash-rest-api"
 }
