--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Provides access to *some* of Stash's APIs.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
     "start": "mocha --watch",
-    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --ui bdd -R spec -t 5000"
+    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --ui bdd -R spec -t 5000",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "author": "Ben Sorohan <npm@sorohan.com.au>",
   "license": "MIT",
   "dependencies": {
+    "coveralls": "^2.11.3",
     "istanbul": "^0.3.17",
     "lodash": "^3.10.0",
     "mocha": "^2.2.5",
