--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stash-rest-api",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Provides access to *some* of Stash's APIs.",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,9 @@
     "mocha": "^2.2.5",
     "node-rest-client": "^1.5.1",
     "query-string": "^2.3.0",
-    "sinon": "^1.15.4"
+    "sinon": "^1.15.4",
+    "async": "~1.3.0",
+    "promise": "~7.0.3"
   },
   "devDependencies": {},
   "repository": {
