--- a/package.json
+++ b/package.json
@@ -27,33 +27,28 @@
   "_requiredBy": [
     "/"
   ],
-  "_resolved": "https://registry.npmjs.org/bitbucket-server-nodejs/-/bitbucket-server-nodejs-2.6.0.tgz",
-  "_shasum": "bdbee3aa51121f4f3886d0bcbdee9445f140b6ac",
-  "_shrinkwrap": null,
-  "_spec": "bitbucket-server-nodejs",
-  "_where": "/Users/mmassou1/dev/simple-express",
   "author": {
     "email": "npm@markmssd.com",
-    "name": "Ben markmssd"
+    "name": "Mark Massoud"
   },
   "bugs": {
     "url": "https://github.com/markmssd/bitbucket-server-nodejs/issues"
   },
   "dependencies": {
     "async": "~1.3.0",
-    "coveralls": "^2.11.3",
-    "istanbul": "^0.3.17",
     "lodash": "^4.16.1",
-    "mocha": "^2.2.5",
     "query-string": "^2.3.0",
     "request": "^2.75.0",
-    "request-promise": "^4.1.1",
-    "sinon": "^1.15.4"
+    "request-promise": "^4.1.1"
   },
-  "description": "Provides access to *some* of Stash's APIs.",
+  "description": "Provides access to some of Bitbucket-Server's APIs.",
   "devDependencies": {
     "bluebird": "^3.4.6",
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^2.2.5",
+    "coveralls": "^2.11.3",
+    "istanbul": "^0.3.17",
+    "sinon": "^1.15.4"
   },
   "homepage": "https://github.com/markmssd/bitbucket-server-nodejs",
   "keywords": [
@@ -67,13 +62,12 @@
   "main": "index.js",
   "maintainers": [
     {
-      "name": "markmssd",
+      "name": "Mark Massoud",
       "email": "npm@markmssd.com"
     }
   ],
   "name": "bitbucket-server-nodejs",
   "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/markmssd/bitbucket-server-nodejs.git"
@@ -83,5 +77,5 @@
     "start": "mocha --watch",
     "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --ui bdd -R spec -t 5000"
   },
-  "version": "2.6.0"
+  "version": "2.6.2"
 }
